# kvc

./: .clang-format  .dockerignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  VERSIONS.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: pages.yml
bench/: __init__.py  __main__.py  _entrypoint.py  azure.sh  azure_build_image.sh  bench.py  dashboard.py  docker.sh  generate_manifest.py  main.py  requirements.txt  run.py  run.sh  worker.py
bench/docs/: index.html
docs/: app.js  index.html  style.css
docs/data/: runs.json  versions.json
perf/: check.sh  flamegraph.sh  record.sh  workload.sh
src/: hashmap.c  protocol.c
src/v1.1_connection_pool/: CMakeLists.txt  hashmap.c  main.c  protocol.c  protocol.h  server.c  server.h
src/v1.2_conn_pool_cpp/: CMakeLists.txt  hashmap.cpp  hashmap.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
src/v1_baseline/: CMakeLists.txt  hashmap.h  main.c  protocol.c  protocol.h  server.c
src/v2_better_hashmap/: CMakeLists.txt  arena.c  arena.h  hashmap.c  hashmap.h  main.c  protocol.c  server.c  server.h
src/v2_foo/: hashmap.h  protocol.h
src/v3.1_multicore_shared_map/: CMakeLists.txt  hashmap.cpp  hashmap.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
